snapshots/syntax/library/functions/datetime/now/now_array_assignment.snap
---
source: src/syntax/library/functions/datetime/now.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DimStatement
      children:
        - kind: DimKeyword
          text: Dim
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: timestamps
        - kind: LeftParenthesis
          text: (
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "10"
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: DateKeyword
          text: Date
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: CallExpression
          children:
            - kind: Identifier
              text: timestamps
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: i
            - kind: RightParenthesis
              text: )
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: Now
        - kind: Newline
          text: "\n"
